check_errors_4_utf8.txt
cargo :     Checking 
vibe-studio v0.1.0 (C:\Users\k
uron\.gemini\antigravity\WorkS
pace\Vibe-Studio)
At line:1 char:1
+ cargo check --color never > 
check_errors_4.txt 2>&1; 
Get-Content chec ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : 
    NotSpecified: (    Check  
  ing vi...ce\Vibe-Studio):   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
error: Failed to parse 
formatted segment: Expected 
Ident or Expression
  --> src\sidebar.rs:67:24
   |
67 | ...e: "display: flex; 
align-items: center; gap: 
4px; cursor: pointer; 
flex-grow: 1; min-width: 0; 
opacity: {if visible { 1.0 } 
else { 0.35 }};",
   |       ^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Failed to parse 
formatted segment: Expected 
Ident or Expression
   --> src\sidebar.rs:280:44
    |
280 | ...e: "display: flex; 
align-items: center; gap: 
5px; padding: 6px 8px; 
cursor: pointer; user-select: 
none; background: {if 
is_selected { 
\"rgba(251,191,36,0.1)\" } 
else { \"transparent\" }};",
    |       ^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^

error: Failed to parse 
formatted segment: Expected 
Ident or Expression
  --> src\timeline.rs:48:20
   |
48 | ...e: "position: 
absolute; left: {left_pct}%; 
width: {width_...or) } else { 
\"none\".to_string() }};",
   |       ^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^...^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^

error: Failed to parse 
formatted segment: Expected 
Ident or Expression
  --> src\inspector.rs:47:24
   |
47 | ...e: "width: 28px; 
height: 14px; border-radius: 
7px; background: {if checked 
{ \"var(--accent-color)\" } 
else { 
\"rgba(255,255,255,0.1)\" }}; 
display: flex; align-items: 
center; padding: 0 2px; 
transition: background 0.2s;",
   |       ^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^

error[E0382]: use of moved 
value: `layer.id`
   --> src\inspector.rs:185:54
    |
171 | ...                   
oninput: move |evt| {
    |                         
       ---------- value moved 
into closure here
172 | ...                     
  if let Ok(v) = 
evt.value().parse::<f64>() {
173 | ...                     
      if let Some(l) = state.w
rite().layers.iter_mut().find(
|l| l.id == layer.id) {
    |                         
                              
                              
            -------- variable 
moved due to use in closure
...
185 | ...                   
oninput: move |evt| {
    |                         
       ^^^^^^^^^^ value used 
here after move
186 | ...                     
  if let Ok(v) = 
evt.value().parse::<f64>() {
187 | ...                     
      if let Some(l) = state.w
rite().layers.iter_mut().find(
|l| l.id == layer.id) {
    |                         
                              
                              
            -------- use 
occurs due to use in closure
    |
    = note: move occurs 
because `layer.id` has type 
`std::string::String`, which 
does not implement the `Copy` 
trait

error[E0382]: use of moved 
value: `layer.id`
   --> src\inspector.rs:199:54
    |
185 | ...                   
oninput: move |evt| {
    |                         
       ---------- value moved 
into closure here
186 | ...                     
  if let Ok(v) = 
evt.value().parse::<f64>() {
187 | ...                     
      if let Some(l) = state.w
rite().layers.iter_mut().find(
|l| l.id == layer.id) {
    |                         
                              
                              
            -------- variable 
moved due to use in closure
...
199 | ...                   
oninput: move |evt| {
    |                         
       ^^^^^^^^^^ value used 
here after move
200 | ...                     
  if let Ok(v) = 
evt.value().parse::<f64>() {
201 | ...                     
      if let Some(l) = state.w
rite().layers.iter_mut().find(
|l| l.id == layer.id) {
    |                         
                              
                              
            -------- use 
occurs due to use in closure
    |
    = note: move occurs 
because `layer.id` has type 
`std::string::String`, which 
does not implement the `Copy` 
trait

error[E0382]: borrow of moved 
value: `layer.id`
   --> src\inspector.rs:265:57
    |
199 | ...                   
oninput: move |evt| {
    |                         
       ---------- value moved 
into closure here
200 | ...                     
  if let Ok(v) = 
evt.value().parse::<f64>() {
201 | ...                     
      if let Some(l) = state.w
rite().layers.iter_mut().find(
|l| l.id == layer.id) {
    |                         
                              
                              
            -------- variable 
moved due to use in closure
...
265 | ...                     
  .filter(|l| l.layer_type == 
LayerType::Composition && 
l.id != layer.id)
    |                         
          ^^^ value borrowed 
here after move               
     -------- borrow occurs 
due to use in closure
    |
    = note: move occurs 
because `layer.id` has type 
`std::string::String`, which 
does not implement the `Copy` 
trait

For more information about 
this error, try `rustc 
--explain E0382`.
error: could not compile 
`vibe-studio` (bin 
"vibe-studio") due to 7 
previous errors
